# cloudformation-datasource

./: .gitignore  LICENSE  README.md  examples.md  pyproject.toml  template.yaml
.devcontainer/: devcontainer.json
cloudformation_data_source/: app.py
tests/unit/: test_handler.py
