[tool.poetry]
name = "cloudformation-datasource"
version = "0.1.0"
description = ""
authors = ["Joseph de Clerck <j2clerck@gmail.com>"]
readme = "README.md"
packages = [{include = "cloudformation_data_source"}]

[tool.poetry.dependencies]
python = ">=3.9,<4"
boto3 = ">=1.24.77"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
cfnresponse = "^1.1.2"
boto3 = ">=1.24.77"
aws-lambda-powertools = "^2.8.0"
flake8 = "^5.0.4"
bandit = "^1.7.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
